# storyplots-ios

./: .gitignore  AUTONOMY.md  CLAUDE.md  HANDOFF.md  README.md  dev-runbook.md
.claude/: settings.json
.serena/: project.yml
SeedKit-v2.5/: README.md  SEED-GUIDE.md
base/: CLAUDE.md  LICENSE  README.md  SESSION_HANDOFF.md  dev-runbook.md  package.json
base/backend/: pyproject.toml
base/backend/app/: main.py  prompt_assembly.py
base/backend/app/agents/: avatar_refine.py  canon_regen.py  character_generate.py  character_refine.py  comfyui.py  comfyui_provider.py  conversation.py  embeddings.py  fal_provider.py  grammar.py  image_provider.py  image_refine.py  memory_extract.py  tts_elevenlabs.py  tts_openai.py  tts_split.py
base/backend/app/lib/: fal_avatar.py  image_compress.py  image_dispatch.py
base/backend/app/prompts/: avatar_refine_system.txt  branch_summary_system.txt  character_generate_system.txt  character_refine_system.txt  grammar_system.txt  image_refine_system.txt  image_refine_system_seedream.txt  insights_system.txt  memory_extract_system.txt  sfw_guardrail.txt  visual_roleplay_instructions.txt
base/backend/app/routes/: audio.py  avatar_generate.py  character_generate.py  character_refine.py  chat.py  fork.py  health.py  image.py  insights.py  provider_embedding.py
seed/: api-contract.md  creator-vision.md  design.md  open-questions.md  reference-map.md  roadmap.md  tech-stack.md  ux.md
storyplots/: ContentView.swift  storyplots.entitlements  storyplotsApp.swift
storyplots.xcodeproj/: project.pbxproj
storyplotsTests/: ThemeTests.swift  (+5 more)
(+519 files in other folders)
